# CodeClean_ExampleC-

./: .gitignore  CMakeLists.txt  EXERCISES.md  INDEX.md  LICENSE  QUICK_START.md  README.md  VIOLATIONS_LIST.md  compile.sh  employees_import.csv
src/: main.cpp
